--- a/frontend/advanced-port_mapping.html
+++ b/frontend/advanced-port_mapping.html
@@ -20,7 +20,7 @@
     </style>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Broadband Router</title>
+    <title>ACS Virtual Client</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
@@ -134,7 +134,8 @@
     <script src="./js/storage.js"></script>
     <script src="./js/commonFunction.js"></script>
     <script src="./js/controller/advanced.js"></script>
-
+    <script src="./js/service/httpService.js"></script>
+    <script src="./js/service/utils.js"></script>
     <script>
       window.onload = () => {
         checkVersion();
@@ -1025,7 +1026,7 @@
                   </thead>
                   <tbody id="bodyData">
                     <template id="rowElem">
-                      <tr class="ng-scope">
+                      <tr class="ng-scope" index="">
                         <td class="no-padding-hr ng-scope">
                           <span class="enable"></span>
                         </td>
