--- a/frontend/security-parental_control_settings.html
+++ b/frontend/security-parental_control_settings.html
@@ -20,7 +20,7 @@
     </style>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Broadband Router</title>
+    <title>ACS Virtual Client</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
@@ -134,6 +134,8 @@
     <script src="./js/storage.js"></script>
     <script src="./js/commonFunction.js"></script>
     <script src="./js/controller/security.js"></script>
+    <script src="./js/service/httpService.js"></script>
+    <script src="./js/service/utils.js"></script>
     <script>
       window.onload = () => {
         checkVersion();
@@ -855,7 +857,6 @@
                   id="voip_config-0"
                 >
                   <a
-                    tabindex="-1"
                     href="voip-config.html"
                     type="tableform"
                     title="Configuration"
@@ -874,12 +875,7 @@
 
       <div id="content-wrapper" style="min-height: 606px">
         <!-- ngView: true -->
-        <div
-          data-ng-view="true"
-          id="dataView"
-          translate-cloak=""
-          class="ng-scope"
-        >
+        <div id="dataView" class="ng-scope">
           <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
@@ -895,10 +891,7 @@ and open the template in the editor.
           />
 
           <div id="translation" class="hide ng-scope">parentalcontrol</div>
-          <div
-            ng-controller="parentalController"
-            class="parentalcontrolpage ng-scope"
-          >
+          <div class="parentalcontrolpage ng-scope">
             <!-- ngInclude: 'templates/breadcrumbs.html' -->
             <div class="ng-scope">
               <div class="row ltq_breadcrumbs ng-scope">
@@ -978,10 +971,7 @@ and open the template in the editor.
             </div>
 
             <div class="subheader">
-              <p
-                ng-bind="&#39;parentalcontrol.headerdescription&#39; | translate"
-                class="ng-binding"
-              >
+              <p class="ng-binding">
                 It allows you to control the home network users to access the
                 internet by setting certain times of the day
               </p>
@@ -989,103 +979,50 @@ and open the template in the editor.
 
             <div class="row ng-hide" ng-show="parentalformnamepopup">
               <div class="alert alert-danger">
-                <a
-                  class="close"
-                  aria-label="close"
-                  ng-click="popupclose(&#39;parentalformnamepopup&#39;)"
-                  >×</a
-                >
+                <a class="close">×</a>
                 <strong class="ng-binding">Warning!</strong
-                ><span
-                  ng-bind="parentalformnamepopupval"
-                  class="ng-binding"
-                ></span>
+                ><span class="ng-binding"></span>
               </div>
             </div>
             <div class="row ng-hide" ng-show="parentaltablenamepopup">
               <div class="alert alert-danger">
-                <a
-                  class="close"
-                  aria-label="close"
-                  ng-click="popupclose(&#39;parentaltablenamepopup&#39;)"
-                  >×</a
-                >
+                <a class="close" aria-label="close">×</a>
                 <strong class="ng-binding">Warning!</strong
-                ><span
-                  ng-bind="parentaltablenamepopupval"
-                  class="ng-binding"
-                ></span>
+                ><span class="ng-binding"></span>
               </div>
             </div>
             <div class="row ng-hide" ng-show="parentalpostnamepopup">
               <div class="alert alert-danger">
-                <a
-                  class="close"
-                  aria-label="close"
-                  ng-click="popupclose(&#39;parentalpostnamepopup&#39;)"
-                  >×</a
-                >
+                <a class="close">×</a>
                 <strong class="ng-binding">Warning!</strong
-                ><span
-                  ng-bind="parentalpostnamepopupval"
-                  class="ng-binding"
-                ></span>
+                ><span class="ng-binding"></span>
               </div>
             </div>
-            <div class="row ng-hide" ng-show="parentalformstatus">
+            <div class="row ng-hide">
               <div class="alert alert-info">
-                <a
-                  class="close"
-                  aria-label="close"
-                  ng-click="popupclose(&#39;parentalformstatus&#39;)"
-                  >×</a
-                >
-                <strong ng-bind="&#39;Info!&#39; | translate" class="ng-binding"
-                  >Info!</strong
-                ><span ng-bind="parentalformmessage" class="ng-binding"></span>
+                <a class="close" aria-label="close">×</a>
+                <strong>Info!</strong><span></span>
               </div>
             </div>
             <div class="row ng-hide" ng-show="multipleparamspopup">
               <div class="alert alert-danger">
-                <a
-                  class="close"
-                  aria-label="close"
-                  ng-click="popupclose(&#39;multipleparamspopup&#39;)"
-                  >×</a
-                >
+                <a class="close" aria-label="close">×</a>
                 <strong class="ng-binding">Warning!</strong
-                ><span
-                  ng-bind="multipleparamspopupval"
-                  class="ng-binding"
-                ></span>
+                ><span class="ng-binding"></span>
               </div>
             </div>
             <div class="row ng-hide" ng-show="parentaldeletepopup">
               <div class="alert alert-danger">
-                <a
-                  class="close"
-                  aria-label="close"
-                  ng-click="popupclose(&#39;parentaldeletepopup&#39;)"
-                  >×</a
-                >
+                <a class="close">×</a>
                 <strong class="ng-binding">Warning!</strong
-                ><span
-                  ng-bind="parentaldeletepopupval"
-                  class="ng-binding"
-                ></span>
+                ><span class="ng-binding"></span>
               </div>
             </div>
             <div class="row">
               <div class="panel">
-                <!-- ngInclude: 'templates/tabs.html' -->
                 <div class="ng-scope">
-                  <!-- 如有使用此 tabs, 請同步 menu Controllers 第492行的switch-->
                   <ul class="nav nav-tabs gemtek-tab ng-scope">
-                    <!-- ngRepeat: tab in tabs -->
-                    <li
-                      ng-class="{&#39;active&#39;: currentTab === &#39;parentalcontrol&#39;}"
-                      class="ng-scope active"
-                    >
+                    <li class="ng-scope active">
                       <a
                         href="security-parental_control_settings.html"
                         class="ng-binding"
@@ -1094,10 +1031,7 @@ and open the template in the editor.
                       </a>
                     </li>
                     <!-- end ngRepeat: tab in tabs -->
-                    <li
-                      ng-class="{&#39;active&#39;: currentTab === &#39;parentalcontroldevice&#39;}"
-                      class="ng-scope"
-                    >
+                    <li class="ng-scope">
                       <a
                         href="security-parental_control-devControl.html"
                         class="ng-binding"
@@ -1109,110 +1043,73 @@ and open the template in the editor.
                   </ul>
                 </div>
                 <div class="panel-body">
-                  <form
-                    class="form-horizontal lantiq-form-text ng-pristine ng-valid"
-                    name="parentalcontrol"
-                  >
-                    <div class="row formlalignment">
-                      <div class="gemtek-mb-30">
-                        <span
-                          ng-bind="&#39;Device.Firewall.X_GTK_ParentalControl.Parental control Enable&#39; | translate"
-                          class="ng-binding"
-                          >Enable Parental control</span
-                        >
+                  <div class="row formlalignment">
+                    <div class="gemtek-mb-30">
+                      <span class="ng-binding">Enable Parental control</span>
+                      <input
+                        id="DeviceFirewallX_GTK_ParentalControl_Enable"
+                        name="Enable"
+                        type="checkbox"
+                        class="form-control ng-pristine ng-untouched ng-valid"
+                      />
+                      <label
+                        class="checkbox_left_align"
+                        for="DeviceFirewallX_GTK_ParentalControl_Enable"
+                      ></label>
+                      <span class="error ng-binding ng-hide"></span>
+                    </div>
+                    <div class="form-group required">
+                      <span class="ng-binding">Default Action</span>
+                      <label
+                        for="DeviceFirewallX_GTK_ParentalControl_DefaultAction"
+                      ></label>
+                      <div class="radiogroup">
                         <input
-                          id="DeviceFirewallX_GTK_ParentalControl_Enable"
-                          name="Enable"
-                          type="checkbox"
-                          class="form-control ng-pristine ng-untouched ng-valid"
-                          ng-change="textChange(&#39;DeviceFirewallX_GTK_ParentalControlEnable&#39;)"
-                          ng-model="DeviceFirewallX_GTK_ParentalControl.Enable"
+                          id="permit"
+                          name="pcdefaultaction"
+                          class="with-gap ng-pristine ng-untouched ng-valid"
+                          type="radio"
+                          value="1"
                         />
-                        <label
-                          class="checkbox_left_align"
-                          for="DeviceFirewallX_GTK_ParentalControl_Enable"
-                        ></label>
-                        <span
-                          class="error ng-binding ng-hide"
-                          forname="DeviceFirewallX_GTK_ParentalControl_Enable"
-                          ng-show="DeviceFirewallX_GTK_ParentalControl_Enableresponsestatus"
-                          ng-bind="DeviceFirewallX_GTK_ParentalControl_Enableval"
-                        ></span>
+                        <label for="permit">Permit</label>
+                        <input
+                          id="deny"
+                          name="pcdefaultaction"
+                          class="with-gap ng-pristine ng-untouched ng-valid"
+                          type="radio"
+                          value="0"
+                        />
+                        <label for="deny">Deny</label>
                       </div>
-                      <div class="form-group required">
-                        <span
-                          ng-bind="&#39;Device.Firewall.X_GTK_ParentalControl.Default Action&#39; | translate"
-                          class="ng-binding"
-                          >Default Action</span
-                        >
-                        <label
-                          for="DeviceFirewallX_GTK_ParentalControl_DefaultAction"
-                        ></label>
-                        <div class="radiogroup">
-                          <input
-                            id="permit"
-                            name="pcdefaultaction"
-                            class="with-gap ng-pristine ng-untouched ng-valid"
-                            type="radio"
-                            ng-init="DeviceFirewallX_GTK_ParentalControl_DefaultAction.DefaultAction = &#39;1&#39;"
-                            ng-model="DeviceFirewallX_GTK_ParentalControl.DefaultAction"
-                            value="1"
-                          />
-                          <label for="permit">Permit</label>
-                          <input
-                            id="deny"
-                            name="pcdefaultaction"
-                            class="with-gap ng-pristine ng-untouched ng-valid"
-                            type="radio"
-                            ng-model="DeviceFirewallX_GTK_ParentalControl.DefaultAction"
-                            value="0"
-                          />
-                          <label for="deny">Deny</label>
-                        </div>
 
-                        <span
-                          class="error ng-binding ng-hide"
-                          forname="DeviceFirewallX_GTK_ParentalControl_DefaultAction"
-                          ng-show="parentalcontrol.pcdefaultaction.$error.required"
-                          ng-bind="&#39;Device.Firewall.X_GTK_ParentalControl.DefaultAction.$error.required&#39; | translate"
-                          >DefaultAction is required</span
-                        >
-                        <span
-                          class="error ng-binding ng-hide"
-                          forname="DeviceFirewallX_GTK_ParentalControl_DefaultAction"
-                          ng-show="DeviceFirewallX_GTK_ParentalControl_DefaultActionresponsestatus"
-                          ng-bind="DeviceFirewallX_GTK_ParentalControl_DefaultActionval"
-                        ></span>
-                      </div>
+                      <span class="error ng-binding ng-hide"
+                        >DefaultAction is required</span
+                      >
+                      <span class="error ng-binding ng-hide"></span>
                     </div>
+                  </div>
 
-                    <div class="text-center gemtek-button-inside-panel-html">
-                      <div class="btn-align">
-                        <button
-                          class="gemtek-btn-normal"
-                          id="Cancel"
-                          value="Cancel"
-                        >
-                          <span class="ng-binding">Cancel</span>
-                        </button>
-                      </div>
-                      <div class="btn-align">
-                        <button
-                          class="gemtek-btn-primary"
-                          id="Apply"
-                          value="Apply"
-                          formstatus="true"
-                          title="Save"
-                        >
-                          <span
-                            ng-bind="&#39;Apply&#39; | translate"
-                            class="ng-binding"
-                            >Apply</span
-                          >
-                        </button>
-                      </div>
+                  <div class="text-center gemtek-button-inside-panel-html">
+                    <div class="btn-align">
+                      <button
+                        class="gemtek-btn-normal"
+                        id="Cancel"
+                        value="Cancel"
+                      >
+                        <span class="ng-binding">Cancel</span>
+                      </button>
                     </div>
-                  </form>
+                    <div class="btn-align">
+                      <button
+                        class="gemtek-btn-primary"
+                        id="Apply"
+                        value="Apply"
+                        title="Save"
+                      >
+                        <span class="ng-binding">Apply</span>
+                      </button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -1237,90 +1134,6 @@ and open the template in the editor.
       </div>
       <div id="main-menu-bg"></div>
     </div>
-
-    <div
-      class="modal fade"
-      id="myModalHorizontal"
-      aria-labelledby="myModalLabel"
-      aria-hidden="true"
-      tabindex="-1"
-      role="dialog"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">×</span>
-            </button>
-            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-          </div>
-
-          <!-- Modal Body -->
-          <div class="modal-body">
-            <form class="form-horizontal ng-pristine ng-valid" role="form">
-              <div class="form-group">
-                <label
-                  class="col-sm-12 col-lg-3 col-md-3 col-xs-12 control-label"
-                  for="Status"
-                  >Progress:</label
-                >
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xs-12">
-                  <div
-                    class="progress-striped active progress"
-                    value=""
-                    type=""
-                  >
-                    <div
-                      class="progress-bar"
-                      role="progressbar"
-                      aria-valuenow=""
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      aria-valuetext="%"
-                      style="width: 100%"
-                    >
-                      <span class="ng-binding ng-scope"> </span
-                      ><i class="ng-scope ng-hide">!!! Watch out !!!</i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label
-                  class="col-sm-12 col-lg-3 col-md-3 col-xs-12 control-label"
-                  for="Status"
-                  >Status</label
-                >
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xs-12">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="Status"
-                    placeholder="WPS Session Start"
-                  />
-                </div>
-              </div>
-            </form>
-          </div>
-          <!-- Modal Footer -->
-          <div class="modal-footer">
-            <button
-              type="button"
-              data-ng-click="cancelInterval()"
-              data-dismiss="modal"
-              class="btn btn-info"
-            >
-              Abort WPS
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
     <!--Modal End-->
     <!--        <script src="js/Jquery/jquery1.9.1.min.js"></script>-->
     <!--[if !IE]> -->
@@ -1329,3 +1142,4 @@ and open the template in the editor.
     <div class="hiddendiv common"></div>
   </body>
 </html>
+
