--- a/frontend/wifi-2_4G-wds.html
+++ b/frontend/wifi-2_4G-wds.html
@@ -20,7 +20,7 @@
     </style>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Broadband Router</title>
+    <title>ACS Virtual Client</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
@@ -134,7 +134,8 @@
     <script src="./js/storage.js"></script>
     <script src="./js/commonFunction.js"></script>
     <script src="./js/controller/wifi.js"></script>
-
+    <script src="./js/service/httpService.js"></script>
+    <script src="./js/service/utils.js"></script>
     <script>
       window.onload = () => {
         checkVersion();
@@ -1085,9 +1086,9 @@ and open the template in the editor.
                               required="required"
                             >
                               <!-- <option value="">Select</option> -->
-                              <option value="0" selected>Disabled</option>
+                              <option value="Disabled" selected>Disabled</option>
                               <!-- <option value="Legacy">Legacy</option> -->
-                              <option value="1">Hybrid</option>
+                              <option value="Hybrid">Hybrid</option>
                             </select>
                           </div>
                         </div>
